fixed white space

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,8 @@
   font-family: "Poppins-Reg";
 }
 
-html {
-  height: 100%;
+#root {
+  height: 100vh;
 }
 
 .app {
@@ -19,6 +19,5 @@ html {
 
 .appContainer {
   width: 100%;
-  height: 100%;
   padding-top: 86px;
 }
